--- a/biz/ybt-biz/pom.xml
+++ b/biz/ybt-biz/pom.xml
@@ -13,4 +13,20 @@
 	<dependencies>
 		
 	</dependencies>
+
+	<build>
+		<plugins>
+			<!-- 指定编译文件的编码，防止乱码 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
